Fixed color contrasting in footer, included link to wireframe.

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -171,30 +171,31 @@ h2 {
   color: var(--text-color);
 }
 
-footer.social-links {
+.social-links {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  background-color: var(--secondary-color);
-  color: white;
+  color: var(--text-color);
+  background-color: var(--accent2-color);
+  margin-top: 20px;
 }
 
-footer.social-links p {
-  font-size: 20px;
+.footer-info {
+  font-weight: bold;
+  flex: 1;
   text-align: center;
-  margin-left: 125px;
-  flex: auto;
 }
 
-footer.social-links a {
-  margin-left: 10px;
-  margin-right: 10px;
+.social-icons {
+  display: flex;
+  justify-content: flex-end;
 }
 
-footer.social-links img {
+.social-icons img {
   width: 30px;
   height: auto;
+  margin: 0 10px;
 }
 
 /* Contact Page */
@@ -266,8 +267,9 @@ button {
   height: 200px;
 }
 
-
-
+.wireframe-link {
+  color: var(--text-color);
+}
 
 /* Font CSS Styles */
 
